# cosmik-editor

./: .gitignore  README.md  Untitled-1  biome.json  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  index.html  package-lock.json  package.json  playwright-ct.config.ts  playwright.config.ts  pnpm-lock.yaml  shell.nix  tsconfig.json  tsconfig.web.json  vite.config.ts  vitest.config.ts
.github/workflows/: gh-pages.yaml  main.yml  playwright.yml
assets/: angular-html-CCA6uK5u.js  astro-DRosG70n.js  cpp-DFohBy7Y.js  gdresource-B-Voa0yv.js  handlebars-npo4hGWj.js  index-5xIyKQW5.js  index-A9dhQ0GU.css  index-B1LePcnj.css  index-ByrgjzBR.css  index-CBxGW8Kf.js  index-CK4GJuZa.js  index-Ch0DImfI.css  index-DKOXW13z.js  index-DkJwTwEv.css  index-DnLnTyDT.js  index-DnMnsv2l.css  index-DrKICr2P.js  index-vCFzwq8E.js  marko-C2AP0NfW.js  mdc-BGgFH6aU.js  nim-CaD7WNYr.js  razor-B3Rc5T7r.js  rst-BpzPa-jL.js  shellsession-ZfIGBriP.js  svelte-a8rGLUzl.js  tex-0uGjJ9BI.js  twig-DshGX0wd.js  vue-BVB0WzpV.js  wikitext-BSXkYJx4.js
e2e/: app.spec.ts  electron.test.js
main/: index.js
preload/: index.js
renderer/assets/: angular-ts-BdzUJqpd.js  asciidoc-sdyL2GNQ.js  crystal-CRzE51zz.js  erb-5Cd5eIHq.js  fsharp-BO-83zgp.js  git-rebase-Ct8XKp4j.js  haml-TrAu53lP.js  http-Co-gn1i4.js  index-qT9kpHyl.js  julia-HEFZpZq1.js  latex-BA3YTv27.js  (+2 more)
src/: App.scss  App.svelte  App.tsx  index.d.ts  main.ts  main.tsx  styles.css  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  migrated.json
src-tauri/src/: lib.rs  main.rs
(+240 files in other folders)
